# DataBaseCourseWork

./: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  customdialog.cpp  customdialog.h  db_config.ini  main.cpp  mainAppWindow.ui  mainapplication.cpp  mainapplication.h  mainapplication.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  modeldb.cpp  modeldb.h  student.cpp  student.h  student.ui
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
CourseWorkDB.dir/Debug/CourseWorkDB.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
CourseWorkDB_autogen/include_Debug/EWIEGA46WW/: moc_mainwindow.cpp.d
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
